--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- connect css file -->
-    <link rel="stylesheet" href="../css/header-style.css" />
-    <link rel="stylesheet" href="../css/footer-style.css">
-    <link rel="stylesheet" href="../css/loading-style.css" />
-    <link rel="stylesheet" href="../css/menu.css" />
+    <link rel="stylesheet" href="/css/header-style.css" />
+    <link rel="stylesheet" href="/css/footer-style.css">
+    <link rel="stylesheet" href="/css/loading-style.css" />
+    <link rel="stylesheet" href="/css/menu.css" />
 
     <!-- fontawesome -->
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
-    <link rel="icon" href="../images/home.ico" />
+    <link rel="icon" href="/images/home.ico" />
     <title>YKPO Cafe</title>
 </head>
 
@@ -51,7 +51,7 @@
                 <h4>Hot Drinks <i class="fa-solid fa-mug-hot"></i></h4>
                 <div class="products ">
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Untitled_Artwork-removebg-preview.png" alt="">
+                        <div class="product-img"><img src="/images/Untitled_Artwork-removebg-preview.png" alt="">
                         </div>
                         <div class="product-info">
                             <p class="prodcut-title">coffee</p>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="product hot-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -163,7 +163,7 @@
                 <h4>Cold Drinks <i class="fa-solid fa-martini-glass-empty"></i></h4>
                 <div class="products">
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="product cold-drinks">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -273,7 +273,7 @@
                 <h4>Food <i class="fa-solid fa-pizza-slice"></i></h4>
                 <div class="products">
                     <div class="product food">
-                        <div class="product-img"><img src="../images/product1.png" alt=""></div>
+                        <div class="product-img"><img src="/images/product1.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">Steak Beef</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                     <div class="product food">
-                        <div class="product-img"> <img src="../images/pasta.png" alt=""></div>
+                        <div class="product-img"> <img src="/images/pasta.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">pizza</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                     <div class="product food">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">burger</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -312,7 +312,7 @@
                         </div>
                     </div>
                     <div class="product food">
-                        <div class="product-img"><img src="../images/burger-removebg-preview.png" alt=""></div>
+                        <div class="product-img"><img src="/images/burger-removebg-preview.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">snadwitch</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -325,7 +325,7 @@
                         </div>
                     </div>
                     <div class="product food">
-                        <div class="product-img"><img src="../images/cezer.png" alt="">
+                        <div class="product-img"><img src="/images/cezer.png" alt="">
                         </div>
                         <div class="product-info">
                             <p class="prodcut-title">Steak Beef</p>
@@ -344,7 +344,7 @@
                 <h4>Dessert <i class="fa-solid fa-cookie-bite"></i></h4>
                 <div class="products">
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -370,7 +370,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -409,7 +409,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -422,7 +422,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -435,7 +435,7 @@
                         </div>
                     </div>
                     <div class="product dessert">
-                        <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                        <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
                             <p class="prodcut-title">cappuccino</p>
                             <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
