--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,16 +28,17 @@
       <div class="links">
         <i class="fa-solid fa-bars  burger-icon"></i>
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li><a href="home">Home</a></li>
           <li><a href="menu">Menu</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="home">About</a></li>
           <li><a href="reservation">Book Table</a></li>
-          <li class="login-phone-btn"><a href="login">Login</a></li>
         </ul>
       </div>
-      <a href="login" class="login-icon">
-        <i class="fa-regular fa-circle-user login-icon"></i>
-      </a>
+      <div class="right-header">
+        <a href="login.html" class="login-icon">
+          <i class="fa-regular fa-circle-user login-icon"></i>
+        </a>
+      </div>
     </div>
   </div>
   <!-- end header -->
