--- a/views/disabled-menu.ejs
+++ b/views/disabled-menu.ejs
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- connect css file -->
-    <link rel="stylesheet" href="../css/header-style.css" />
-    <link rel="stylesheet" href="../css/footer-style.css">
-    <link rel="stylesheet" href="../css/loading-style.css" />
+    <link rel="stylesheet" href="/css/header-style.css" />
+    <link rel="stylesheet" href="/css/footer-style.css">
+    <link rel="stylesheet" href="/css/loading-style.css" />
     <link rel="stylesheet" href="/css/menu-style.css" />
 
     <!-- fontawesome -->
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,15 +28,15 @@
             <div class="links">
                 <i class="fa-solid fa-bars  burger-icon"></i>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="home.html">About</a></li>
-                    <li><a href="reservation.html">Book Table</a></li>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="menu">Menu</a></li>
+                    <li><a href="home">About</a></li>
+                    <li><a href="reservation">Book Table</a></li>
                 </ul>
             </div>
             <div class="right-header">
-                <a href="cart.ejs" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="login.html" class="login-icon">
+                <a href="cart" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="login" class="login-icon">
                     <i class="fa-regular fa-circle-user login-icon"></i>
                 </a>
             </div>
@@ -51,7 +51,7 @@
             <h4>Hot Drinks <i class="fa-solid fa-mug-hot"></i></h4>
             <div class="products ">
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Untitled_Artwork-removebg-preview.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Untitled_Artwork-removebg-preview.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">coffee</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -165,7 +165,7 @@
             <h4>Cold Drinks <i class="fa-solid fa-martini-glass-empty"></i></h4>
             <div class="products">
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -237,7 +237,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="product cold-drinks">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -267,7 +267,7 @@
             <h4>Food <i class="fa-solid fa-pizza-slice"></i></h4>
             <div class="products">
                 <div class="product food">
-                    <div class="product-img"><img src="../images/product1.png" alt=""></div>
+                    <div class="product-img"><img src="/images/product1.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">Steak Beef</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <div class="product food">
-                    <div class="product-img"> <img src="../images/pasta.png" alt=""></div>
+                    <div class="product-img"> <img src="/images/pasta.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">pizza</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -291,7 +291,7 @@
                     </div>
                 </div>
                 <div class="product food">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">burger</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <div class="product food">
-                    <div class="product-img"><img src="../images/burger-removebg-preview.png" alt=""></div>
+                    <div class="product-img"><img src="/images/burger-removebg-preview.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">snadwitch</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -315,7 +315,7 @@
                     </div>
                 </div>
                 <div class="product food">
-                    <div class="product-img"><img src="../images/cezer.png" alt="">
+                    <div class="product-img"><img src="/images/cezer.png" alt="">
                     </div>
                     <div class="product-info">
                         <p class="prodcut-title">Steak Beef</p>
@@ -333,7 +333,7 @@
             <h4>Dessert <i class="fa-solid fa-cookie-bite"></i></h4>
             <div class="products">
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -345,7 +345,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -357,7 +357,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -369,7 +369,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -381,7 +381,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -393,7 +393,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -405,7 +405,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -417,7 +417,7 @@
                     </div>
                 </div>
                 <div class="product dessert">
-                    <div class="product-img"><img src="../images/Daco_1494767.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">cappuccino</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
