edit tea product

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -55,7 +55,7 @@
             <h4>Hot Drinks <i class="fa-solid fa-mug-hot"></i></h4>
             <div class="products ">
                 <div class="product hot-drinks">
-                    <div class="product-img"><img src="../images/Untitled_Artwork-removebg-preview.png" alt=""></div>
+                    <div class="product-img"><img src="/images/Untitled_Artwork-removebg-preview.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">coffee</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -67,13 +67,17 @@
                     </div>
                 </div>
                 <div class="product hot-drinks">
-                    <div class="product-img"></div>
+                    <div class="product-img"><img src="/images/Untitled_Artwork-removebg-preview.png" alt=""></div>
                     <div class="product-info">
                         <p class="prodcut-title">tea</p>
                         <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
                             officiis exercitationem nesciunt accusamus .</p>
                     </div>
-
+                    <div class="price">
+                        <p>29.99 $</p>
+                        <button class="atc">Add To Cart</button>
+                    </div>
+                </div>
                     <div class="product hot-drinks">
                         <div class="product-img"><img src="/images/Daco_1494767.png" alt=""></div>
                         <div class="product-info">
