--- a/css/login-style.css
+++ b/css/login-style.css
@@ -44,7 +44,7 @@ background-color: var(--background-main-color);
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url('/images/IMG_6452.PNG');
+  background-image: url("/images/IMG_6452.PNG");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -144,7 +144,15 @@ form .login-btn:hover {
   color: var(--front-main-color);
   text-shadow: 3px 2px 4px black;
 }
-
+.login-container .error {
+  color: red;
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: capitalize;
+  text-shadow: 0px 1px 0px red;
+  display: none;
+}
+/* 
 /* loading animation */
 
 .loader {
