--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,13 +27,12 @@
           <input type="email" name="email" class="email" placeholder="Email" autocomplete="off" required />
         </div>
         <!-- I need this one to show error message in page -->
-        <!-- <div for="email" class="email error"></div> -->
         <div class="password-container">
           <i class="fa-solid fa-key"></i>
           <input type="password" name="password" class="password" placeholder="Password" autocomplete="off" required />
         </div>
+        <p class="error" name="errorMsg">the username or password is not correct. please try again</p>
         <!-- I need this one to show error message in page -->
-        <!-- <div class="password error"></div> -->
         <input type="submit" value="Login" class="login-btn" />
       </form>
       <p>Doesn't have account ? <a href="signup">Signup</a></p>
