--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
         <ul>
           <li><a href="home">Home</a></li>
           <li><a href="menu">Menu</a></li>
-          <li><a href="home">About</a></li>
+          <li><a href="home#about">About</a></li>
           <li><a href="reservation">Book Table</a></li>
         </ul>
       </div>
