--- a/views/admin-dashboard.html
+++ b/views/admin-dashboard.html
@@ -40,11 +40,98 @@
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
                 <li class="products"><a href=""><i class="fa-solid fa-utensils"></i> products</a></li>
+                <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
+
             </ul>
-            <button class="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i>logout</button>
+            <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
-
+            <h1 class="dashboard-title">
+                Dashboard
+            </h1>
+            <div class="statics">
+                <div class="sales">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <p class="title">
+                        total sales
+                        <br>
+                        <span class="num">3500 $</span>
+                    </p>
+                </div>
+                <div class="total-orders">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <p class="title">
+                        total orders
+                        <br>
+                        <span class="num">211</span>
+                    </p>
+                </div>
+                <div class="total-users">
+                    <i class="fa-solid fa-users"></i>
+                    <p class="title">
+                        total users
+                        <br>
+                        <span class="num">1300</span>
+                    </p>
+                </div>
+            </div>
+            <div class="previous-orders">
+                <h1 class="title">Recent orders</h1>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>customers name</th>
+                            <th>order number</th>
+                            <th>price </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>ahmad mohammed</td>
+                            <td>1</td>
+                            <td>235 $</td>
+                        </tr>
+                        <tr>
+                            <td> hoda alhoot</td>
+                            <td>2</td>
+                            <td>50 $</td>
+                        </tr>
+                        <tr>
+                            <td>ali aldkhlaoe</td>
+                            <td>3</td>
+                            <td>15 $</td>
+                        <tr>
+                            <td>ahmad mohammed</td>
+                            <td>4</td>
+                            <td>235 $</td>
+                        </tr>
+                        <tr>
+                            <td> hoda alhoot</td>
+                            <td>5</td>
+                            <td>50 $</td>
+                        </tr>
+                        <tr>
+                            <td>ali aldkhlaoe</td>
+                            <td>6</td>
+                            <td>15 $</td>
+                        <tr>
+                            <td>ahmad mohammed</td>
+                            <td>7</td>
+                            <td>235 $</td>
+                        </tr>
+                        <tr>
+                            <td> hoda alhoot</td>
+                            <td>8</td>
+                            <td>50 $</td>
+                        </tr>
+                        <tr>
+                            <td>ali aldkhlaoe</td>
+                            <td>9</td>
+                            <td>15 $</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <!-- end header -->
