new upadte admin customer page

--- a/css/admin-customers.css
+++ b/css/admin-customers.css
@@ -58,7 +58,7 @@ body {
   background: var(--color-background);
   user-select: none;
   overflow-x: hidden;
-
+  position: relative;
   color: var(--color-dark);
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -121,15 +121,15 @@ body {
 }
 /* end header style */
 
-/* start dashboard container section */
-.dashboard-container {
+/* start customer container section */
+.customer-container {
   width: 100%;
   height: 90vh;
   display: flex;
   flex-wrap: nowrap;
   text-transform: capitalize;
 }
-.dashboard-container .aside {
+.customer-container .aside {
   background-color: var(--color-background);
   width: 290px;
   height: 90%;
@@ -144,10 +144,10 @@ body {
   z-index: 1;
   transition-duration: 0.5s;
 }
-.dashboard-container .aside .dashboard a {
+.customer-container .aside .customers a {
   color: orangered;
 }
-.dashboard-container .aside li {
+.customer-container .aside li {
   font-size: var(--aside-links-size);
   margin-bottom: 45px;
   display: flex;
@@ -159,7 +159,7 @@ body {
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-.dashboard-container .aside li:hover {
+.customer-container .aside li:hover {
   color: black;
   transform: translateX(15px);
   -webkit-transform: translateX(15px);
@@ -168,13 +168,13 @@ body {
   -o-transform: translateX(15px);
   box-shadow: var(--box-shadow);
 }
-.dashboard-container .aside li:hover a {
+.customer-container .aside li:hover a {
   color: black;
 }
-.dashboard-container .aside li a {
+.customer-container .aside li a {
   color: var(--aside-links-color);
 }
-.dashboard-container .aside .logout {
+.customer-container .aside .logout {
   padding: 30px;
   background-color: transparent;
   outline: none;
@@ -183,37 +183,38 @@ body {
   font-weight: bold;
   cursor: pointer;
 }
-.dashboard-container .content h1 {
+.customer-container .content h1 {
   font-size: 35px;
   font-family: var(--statics-font);
   font-weight: bold;
   text-align: center;
 }
-.dashboard-container .content {
+.customer-container .content {
   width: calc(100% - 290px);
   height: 100%;
-  box-shadow: var(--box-shadow);
   position: absolute;
   right: 0;
+  box-shadow: var(--box-shadow);
 }
 /* content style for phones and medium screens */
 @media (max-width: 1200px) {
-  .dashboard-container .aside {
+  .customer-container .aside {
     transform: translateX(-290px);
     -webkit-transform: translateX(-290px);
     -moz-transform: translateX(-290px);
     -ms-transform: translateX(-290px);
     -o-transform: translateX(-290px);
   }
-  .dashboard-container.activeList .aside {
+  .customer-container.activeList .aside {
     transform: translateX(0px);
     -webkit-transform: translateX(0px);
     -moz-transform: translateX(0px);
     -ms-transform: translateX(0px);
     -o-transform: translateX(0px);
   }
-  .dashboard-container .content {
+  .customer-container .content {
     width: 100%;
+    padding: 10px;
     border-radius: var(--border-radius-1);
     -webkit-border-radius: var(--border-radius-1);
     -moz-border-radius: var(--border-radius-1);
@@ -221,59 +222,12 @@ body {
     -o-border-radius: var(--border-radius-1);
   }
 }
-.dashboard-container .content .statics {
-  width: 100%;
-  min-height: 340px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-  align-items: center;
-  justify-items: center;
-  gap: 20px;
-}
-.dashboard-container .content .statics div {
-  width: 380px;
-  height: 300px;
-  background-color: var(--color-white);
-  border-radius: var(--border-radius-3);
-  -webkit-border-radius: var(--border-radius-3);
-  -moz-border-radius: var(--border-radius-3);
-  -ms-border-radius: var(--border-radius-3);
-  -o-border-radius: var(--border-radius-3);
-  box-shadow: var(--box-shadow);
-  padding: 20px;
-  font-size: 35px;
-  font-family: var(--statics-font);
-  font-weight: bold;
-  text-align: center;
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-}
-.content .statics div::after {
-  content: "Last 24 Hours";
-  color: rgb(159, 162, 188);
-  font-size: 20px;
-}
-.dashboard-container .content .statics div i {
-  font-size: 65px;
-  color: var(--color-warning);
-}
-.dashboard-container .content .statics div:hover {
-  box-shadow: none;
-}
 
 /* start table section */
-.previous-orders {
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
 table {
   padding: 10px;
-  width: 100%;
+  width: 95%;
   font-family: var(--statics-font);
   font-size: 25px;
   text-align: center;
@@ -289,17 +243,144 @@ table th,
 table td {
   border-bottom: 1px solid rgba(160, 162, 180, 0.425);
 }
-table td {
-  color: rgb(134, 135, 141);
-  font-size: 20px;
-  word-spacing: 3px;
-  height: 45px;
+@media (min-width: 901px) {
+  table td {
+    color: rgb(134, 135, 141);
+    font-size: 20px;
+    word-spacing: 3px;
+    height: 45px;
+  }
 }
-@media (max-width: 700px) {
+
+table .edit {
+  color: orangered;
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
   table {
-    font-size: 14px;
+    font-size: 12px;
+  }
+  td,
+  th {
+    width: 40px;
+    overflow: hidden;
+  }
+}
+@media (max-width: 600px) {
+  table {
+    font-size: 8px;
+  }
+  td,
+  th {
+    width: 40px;
+    overflow: hidden;
   }
 }
 
 /* end table section */
-/* end dashboard container section */
+
+/* end customers container section */
+/* start details page */
+.details-page {
+  opacity: 0%;
+  z-index: -1;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.active-page {
+  opacity: 100%;
+  z-index: 1;
+  transition: 0.3s;
+  width: 30%;
+  height: 500px;
+  position: fixed;
+  transform: translate(140%, -140%);
+  background-color: var(--color-white);
+  border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  -webkit-transform: translate(140%, -140%);
+  -moz-transform: translate(140%, -140%);
+  -ms-transform: translate(140%, -140%);
+  -o-transform: translate(140%, -140%);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.active-page form {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: no-wrap;
+  align-content: center;
+}
+
+.hide-content {
+  filter: blur(20px);
+  -webkit-filter: blur(20px);
+  pointer-events: none;
+}
+.active-page .input-field-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 95%;
+  height: 90px;
+  background-color: var(--color-white);
+  pointer-events: none;
+  font-size: 20px;
+}
+.active-page i {
+  font-size: 30px;
+}
+.active-page input {
+  width: 78%;
+  height: 60px;
+  font-size: 25px;
+}
+.active-page select {
+  width: 78%;
+  font-size: 25px;
+  color: var(--color-dark);
+}
+.active-page .buttons {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  pointer-events: painted;
+}
+.active-page .buttons input {
+  width: 25%;
+  height: 50px;
+  border-radius: var(--border-radius-3);
+  font-size: 15px;
+  cursor: pointer;
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+}
+.active-page .buttons .delete-btn {
+  background-color: rgba(255, 0, 0, 0.734);
+  color: white;
+  font-weight: bold;
+}
+.buttons .save-btn,
+.cancle-btn {
+  display: none;
+}
+/* end details page */
