--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -77,7 +77,7 @@
             </div>
             <div class="previous-orders">
                 <h1 class="title">Recent orders</h1>
-                <table>
+                <table class="prev-orders-table" name="prev-orders">
                     <thead>
                         <tr>
                             <th>customers name</th>
